fix hover on projects and scrollbar on sidebar

--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -65,6 +65,7 @@ em {
     font-size: 14px;
     font-weight: bold;
     margin-bottom: 10px;
+    text-decoration: underline;
 }
 
 .projects__item-text {
@@ -76,10 +77,8 @@ em {
 
 .hover__container {
     box-sizing: border-box;
-    max-width: 300px;
-    width: 100%;
-    max-height: 300px;
-    height: 100%;
+    width: 300px;
+    height: 300px;
     position: relative;
     overflow: hidden;
     margin-right: 20px;
@@ -100,6 +99,11 @@ em {
         font-size: 16px;
         text-decoration: none;
         color: $white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
     }
 }
 .hover__container:hover .hover__text {
@@ -112,7 +116,11 @@ em {
     height: 100%;
 }
 
-@media screen and (max-width: 340px) {
+@media screen and (max-width: 410px) {
+    .hover__container {
+        width: 250px;
+        height: 250px;
+    }
     .projects__item-text {
         width: 90%;
     }
@@ -122,5 +130,5 @@ em {
     .projects__item-img {
         width: 100%;
     }
-}    
+}   
 
