--- a/styles/index.scss
+++ b/styles/index.scss
@@ -18,7 +18,7 @@ body {
 .main {
     width: 75%;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: hidden;
     overflow-x: hidden;
     float: right;
     @media screen and (max-width: 800px) {
